--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "moment": "^2.18.1",
     "mongodb": "^2.2.26",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "simplemde": "^1.11.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
